# Perplexity-2.0

./: .env  README.md  pyproject.toml  requirements.txt  setup.py
frontend/: main.py
frontend/static/: style.css
frontend/templates/: index.html
server/backend/: logic.ipynb
