[project]
name = "perplexity-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.3",
    "pyppeteer>=2.0.0",
    "uvicorn>=0.34.2",
]
